# secrethook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrethookrc  LICENSE  README.md  pyproject.toml  requirements.lock.txt
sample_project/: .env
src/secrethook/: __init__.py  cli.py  config_loader.py  constants.py  core.py  formatters.py  patterns.py  utils.py
tests/: test_config.py  test_entropy.py  test_formatters.py  test_scan_file.py
